fix issue: padding on mobile devices

--- a/style/mediaquery.css
+++ b/style/mediaquery.css
@@ -1,6 +1,6 @@
 @media (max-width: 448px) {
-  .quote-box {
-    padding: 0;
+  .card {
+    padding: 4%;
   }
 
   .quote-box #quote {
